--- a/008_gcc_params_Makefile/003_Makefile/002_syntax/004_function/Makefile
+++ b/008_gcc_params_Makefile/003_Makefile/002_syntax/004_function/Makefile
@@ -1,8 +1,26 @@
+A =a b c
 
-A := $(c)
-B  = $(c)
-c  = abc
+B = $(foreach f,$(A),$(f).o)
+
+C = a b c d/
+
+D =$(filter %/, $(C))
+
+E = $(filter-out %/, $(C))
+
+files = $(wildcard *.c)
+
+
+files2 = a.c b.c c.c d.c abc
+files3 = $(wildcard $(files2))
+
+
+dep_files = $(patsubst %.c,%.o,$(files2))
 
 all:
-	@echo $(A)
-	@echo $(B)
+	@echo B=$(B)
+	@echo D=$(D)
+	@echo E=$(E)
+	@echo files=$(files)
+	@echo files3=$(files3)
+	@echo dep_files=$(dep_files)
