--- a/014_und_exception_014_004/002/Makefile
+++ b/014_und_exception_014_004/002/Makefile
@@ -1,9 +1,9 @@
-all: start.o led.o uart.o init.o main.o 
+all:  start.o led.o uart.o init.o main.o exception.o
 
 
 	#arm-linux-ld -T start.o led.o uart.o init.o main.o -o sdram.elf 
 
-	arm-linux-ld -T sdram.lds start.o led.o uart.o init.o main.o -o sdram.elf 
+	arm-linux-ld -T sdram.lds $^ -o sdram.elf 
 
 	arm-linux-objcopy -O binary -S sdram.elf sdram.bin
 	arm-linux-objdump -D sdram.elf > sdram.dis
@@ -17,8 +17,8 @@ clean:
 
 
 
-%.o : %.c
-	arm-linux-gcc -mthumb -c -o $@ $<
+%.o:%.c
+	arm-linux-gcc -c -o $@ $<
 %.o : %.S
 	arm-linux-gcc -c -o $@ $<
 	
